--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,6 +13,10 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
+    
+    defaults:
+      run:
+        working-directory: candidate-match
 
     steps:
       # --- Steg 1: Kode-oppsett ---
@@ -30,7 +34,7 @@ jobs:
 
       # --- Steg 2: Bygg og test ---
       - name: Build and Test with Maven
-        run: mvn -B verify --file pom.xml
+        run: mvn -B verify
 
       # --- Steg 3: Kall Gemini API for kode-review ---
       - name: Perform Architecture Review with Gemini
