Add push trigger for testing maven workflow on current branch
- Temporarily added push trigger for ci/move-github-workflows-to-root branch
- This allows testing the workflow fixes before creating PR
- Remove this trigger after workflow is verified to work

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     # Kjører kun når en pull request mot main opprettes eller oppdateres
     branches: [ "main" ]
+  push:
+    branches: [ "ci/move-github-workflows-to-root" ]  # For testing workflow changes
 
 jobs:
   build_and_review:
