maven.yml: add workflow_dispatch and explicit PR event types
- Allow manual runs from Actions tab
- Ensure PR updates (synchronize/ready_for_review) trigger reliably
- Keep temporary push trigger for branch ci/move-github-workflows-to-root

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,9 +3,11 @@
 name: Java CI with Maven and Gemini PR Review
 
 on:
+  workflow_dispatch:
   pull_request:
     # Kjører kun når en pull request mot main opprettes eller oppdateres
     branches: [ "main" ]
+    types: [opened, synchronize, reopened, ready_for_review]
   push:
     branches: [ "ci/move-github-workflows-to-root" ]  # For testing workflow changes
 
