--- a/candidate-match/pom.xml
+++ b/candidate-match/pom.xml
@@ -443,8 +443,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.target}</target>
+                    <release>25</release>
                 </configuration>
             </plugin>
             <plugin>
