--- a/teknologi-barometer-service/pom.xml
+++ b/teknologi-barometer-service/pom.xml
@@ -223,4 +223,17 @@
             </plugin>
         </plugins>
     </build>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <release>25</release>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
