--- a/candidate-match/src/main/resources/application-local.yaml
+++ b/candidate-match/src/main/resources/application-local.yaml
@@ -7,7 +7,8 @@ openai:
   assistantId: ${OPENAI_ASSISTANT_ID}
 gemini:
   apiKey: ${GEMINI_API_KEY}
-  model: gemini-2.5-pro
+  model: gemini-2.5-flash
+  quickModel: gemini-2.5-flash
 embedding:
   enabled: true
   provider: GEMINI
