Move GitHub Actions (.github) to repository root so workflows run (#26)
* Move GitHub Actions (.github) to repository root so workflows run

* Fix relativePath in candidate-match/pom.xml to point to parent POM

- Changed <relativePath/> to <relativePath>../pom.xml</relativePath>
- This allows Maven to find the parent POM in multimodule structure
- GitHub Actions maven workflow can now build successfully

* Fix Gemini workflow steps to use correct working directory

- Gemini review steps now use working-directory: . to access .github/prompts/
- This fixes 'No such file or directory' error when reading prompt files
- Comment steps also updated to read from repo root where files are generated

* Add push trigger for testing maven workflow on current branch

- Temporarily added push trigger for ci/move-github-workflows-to-root branch
- This allows testing the workflow fixes before creating PR
- Remove this trigger after workflow is verified to work

* maven.yml: add workflow_dispatch and explicit PR event types

- Allow manual runs from Actions tab
- Ensure PR updates (synchronize/ready_for_review) trigger reliably
- Keep temporary push trigger for branch ci/move-github-workflows-to-root

* ci: retrigger PR workflow

* Fix workflow validity: remove unsupported working-directory on uses steps

- GitHub Actions does not support working-directory on 'uses' steps
- Read generated files via GITHUB_WORKSPACE in github-script steps
- Should restore jobs on push/pull_request events

* changed LLM model in github action for PR review to gemini-2.5-pro and changed the API key on GitHub

* chore: update gitignore

* ci: refactor GitHub Actions

- Split single job into two: build and review (SRP)
- Extract duplicated Gemini review logic into composite action (.github/actions/gemini-review)
- Use header-based auth (x-goog-api-key) instead of URL query param for security
- Make working directory consistent (candidate-match); write artifacts under app dir
- Remove temporary push trigg

--- a/candidate-match/pom.xml
+++ b/candidate-match/pom.xml
@@ -7,15 +7,15 @@
         <groupId>no.cloudberries</groupId>
         <artifactId>cloudberries-candidate-match-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath/>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>candidate-matcher</artifactId>
     <name>Cloudberries Candidate Matcher</name>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>25</maven.compiler.source>
+        <maven.compiler.target>25</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.version>2.2.0</kotlin.version>
         <javacv.version>1.5.10</javacv.version>
@@ -213,7 +213,7 @@
         <dependency>
             <groupId>io.mockk</groupId>
             <artifactId>mockk-jvm</artifactId>
-            <version>1.14.4</version>
+            <version>1.13.13</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -340,9 +340,17 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
+                <version>3.3.0</version>
                 <configuration>
                     <useModulePath>false</useModulePath>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.lang.invoke=ALL-UNNAMED
+                        --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
+                        --enable-native-access=ALL-UNNAMED
+                        -Djdk.attach.allowAttachSelf=true
+                        -XX:+EnableDynamicAgentLoading
+                    </argLine>
                     <includes>
                         <include>**/*Test.java</include>
                         <include>**/*Test.kt</include>
@@ -423,16 +431,22 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.target}</target>
+                    <release>25</release>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.2.5</version>
+                <version>3.3.0</version>
                 <configuration>
                     <useModulePath>false</useModulePath>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.lang.invoke=ALL-UNNAMED
+                        --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
+                        -Djdk.attach.allowAttachSelf=true
+                        -XX:+EnableDynamicAgentLoading
+                    </argLine>
                     <includes>
                         <include>**/*IntegrationTest.java</include>
                         <include>**/*IntegrationTest.kt</include>
