--- a/ai-rag-service/pom.xml
+++ b/ai-rag-service/pom.xml
@@ -155,6 +155,14 @@
                     </pluginOptions>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <release>25</release>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
