Docker: build candidate-match on Java 21 (Temurin), pin base images; fix GH Actions to build correct Dockerfile; disable legacy webapp workflow
- Dockerfile (candidate-match):
  - Switch to Debian-based Temurin 21 (jammy) and pin by digest
  - Build only the candidate-match module with Maven
  - Keep healthcheck using curl; run as non-root
- Maven: align candidate-match to Java 21 (source/target + compiler plugin release)
- Docker Compose: point build to candidate-match/Dockerfile
- Container App workflow: use ./candidate-match/Dockerfile, push to GHCR
- Disable azure-container-webapp workflow (legacy) so it doesn’t run on push

This unblocks CI/CD: builds image at ghcr.io/thomasandersen77/cloudberries-candidate-match: and deploys via Container Apps.

--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -4,12 +4,9 @@ name: Build and Deploy Container to Azure Web App
 
 env:
   AZURE_WEBAPP_NAME: 'cloudberries-backend' # Replace with your App Service name
-  DOCKERFILE_PATH: './Dockerfile'              # Path to your Dockerfile
+  DOCKERFILE_PATH: './candidate-match/Dockerfile'              # Path to your Dockerfile
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
 
 permissions:
