🐛 Fix foreign key constraint violation during consultant sync
## Problem
Consultant sync was failing with foreign key constraint violation:
- ERROR: update or delete on table 'cv_project_experience' violates foreign key constraint 'fk_cpei_project_experience'
- cv_project_experience_industry table still had references to cv_project_experience records being deleted

## Root Cause
During consultant sync, clearExistingCvData() was trying to delete cv_project_experience records
without first clearing the industry references in cv_project_experience_industry table.

## Solution
1. **Database Migration** (db_changelog-15.0-fix-cascade-delete.xml):
   - Add ON DELETE CASCADE to foreign key constraints
   - fk_cpei_project_experience: cv_project_experience_industry → cv_project_experience
   - fk_cper_project_experience: cv_project_experience_role → cv_project_experience
   - fk_cpes_project_experience: cv_project_experience_skill → cv_project_experience

2. **Service Layer Fix** (ConsultantPersistenceService):
   - Add CvProjectExperienceIndustryRepository dependency
   - Clear industry references before deleting project experiences
   - Proper deletion order: industry refs → roles → skills → project experiences

## Changes
- Created db_changelog-15.0-fix-cascade-delete.xml with cascade delete constraints
- Updated db.changelog-master.xml to include new migration
- Modified ConsultantPersistenceService.clearExistingCvData() to clear industry references first
- Added CvProjectExperienceIndustryRepository dependency to service

## Result
- Consultant sync operations will no longer fail with foreign key constraint violations
- Database constraints now properly cascade deletes
- Service layer respects referential integrity during cleanup operations

--- a/candidate-match/src/main/resources/application-local.yaml
+++ b/candidate-match/src/main/resources/application-local.yaml
@@ -8,6 +8,7 @@ openai:
 gemini:
   apiKey: ${GEMINI_API_KEY}
   model: gemini-2.5-pro
+  quick-model: gemini-2.5-flash
 embedding:
   enabled: true
   provider: GEMINI
