feat(matches): add project-consultant matching API, persistence; fix startup bean conflict
- Introduce new matches module with controller, DTOs, domain entities, repositories, and service implementation
- Expose endpoints under /api/matches: /requests, /requests/{id}/trigger, /requests/{id}/top, /requests/{id}/results, /trigger-all, /health
- Add Liquibase migration (db_changelog-16.0-match-results.xml) creating project_match_result and match_candidate_result with FKs and indexes; update master changelog
- fix(boot): Resolve ConflictingBeanDefinitionException by scoping legacy controllers/matching/MatchesController to non-local profile (@Profile(!local)) to avoid bean name collision with new controller
- Update Spring config (application.yaml, application-prod.yaml); remove application-container.yaml
- Minor: adjust Dockerfile and OllamaConfig
- Docs: add warp_match_feature_instructions.md and update match_consultants.md

Verified: application boots with --spring.profiles.active=local, Liquibase applies new changes, Tomcat starts on :8080.

--- a/candidate-match/Dockerfile
+++ b/candidate-match/Dockerfile
@@ -53,4 +53,4 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
 
 # Bind to 0.0.0.0 and honor PORT if provided by the platform
 # Use container profile for minimal startup without database dependencies
-ENTRYPOINT ["sh", "-c", "exec java -XX:MaxRAMPercentage=75.0 -Dserver.address=0.0.0.0 -Dserver.port=${PORT:-8080} -Dspring.profiles.active=container -jar app.jar"]
+ENTRYPOINT ["sh", "-c", "exec java -XX:MaxRAMPercentage=75.0 -Dserver.address=0.0.0.0 -Dserver.port=${PORT:-8080} -Dspring.profiles.active=prod -jar app.jar"]
