chore: fix missing Ollama configuration

--- a/candidate-match/src/main/resources/application-prod.yaml
+++ b/candidate-match/src/main/resources/application-prod.yaml
@@ -36,6 +36,9 @@ embedding:
   dimension: 768
 
 ai:
+  ollama:
+    base-url: http://localhost:11434
+    model: llama3.2:1b
   provider: GEMINI
   models:
     interpretation: gemini-2.5-flash
