--- a/candidate-match/src/main/resources/application-local.yaml
+++ b/candidate-match/src/main/resources/application-local.yaml
@@ -15,6 +15,9 @@ embedding:
   model: text-embedding-004
   dimension: 768
 ai:
+  ollama:
+    base-url: http://localhost:11434
+    model: llama3.2:1b
   provider: GEMINI
   models:
     interpretation: gemini-2.5-flash
