--- a/candidate-match/src/main/resources/application-local.yaml
+++ b/candidate-match/src/main/resources/application-local.yaml
@@ -64,6 +64,14 @@ sync:
     on-startup: true
 
 spring:
+  servlet:
+    multipart:
+      enabled: true
+      file-size-threshold: 0B
+      max-request-size: 10MB
+      max-file-size: 10MB
+      resolve-lazily: true
+      location: /tmp/uploads
   liquibase:
     change-log: classpath*:/db/changelog/db.changelog-master.xml
     contexts: "default,pgvector"
