--- a/candidate-match/src/main/resources/application-prod.yaml
+++ b/candidate-match/src/main/resources/application-prod.yaml
@@ -1,4 +1,11 @@
 spring:
+  servlet:
+    multipart:
+      enabled: true
+      file-size-threshold: 128KB
+      max-file-size: 10MB
+      max-request-size: 10MB
+      resolve-lazily: true
   datasource:
     url: jdbc:postgresql://${POSTGRES_HOST}:5432/candidatematch
     username: ${POSTGRES_USER}
