--- a/candidate-match/src/main/resources/application.yaml
+++ b/candidate-match/src/main/resources/application.yaml
@@ -1,4 +1,12 @@
 spring:
+  servlet:
+    multipart:
+      enabled: true
+      file-size-threshold: 128KB
+      max-file-size: 10MB
+      max-request-size: 10MB
+      location: /Users/tandersen/candidate_match/data
+      resolve-lazily: true
   datasource:
     hikari:
       maximum-pool-size: 10         # Increase from default 5
