feat(api): drop '/api' base path and align OpenAPI\n\n- Update candidate-match/openapi.yaml and root openapi.yaml to unprefixed paths\n- Controllers previously updated to remove '/api' (included in commit)\n- SecurityConfig reviewed; explicit public routes OK; no '/api/**' matchers\n- Part of fixing 405 Method Not Allowed when calling /auth/login

--- a/candidate-match/docker-compose-local.yaml
+++ b/candidate-match/docker-compose-local.yaml
@@ -10,7 +10,7 @@ services:
     ports:
       - "5433:5432" # Bruker port 5433 for å unngå konflikt med andre instillinger
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
+      test: ["CMD-SHELL", "pg_isready -U candidatematch -d candidatematch"]
       interval: 5s
       timeout: 5s
       retries: 20
