--- a/candidate-match/src/main/resources/application-local.yaml
+++ b/candidate-match/src/main/resources/application-local.yaml
@@ -74,10 +74,10 @@ spring:
       location: /tmp/uploads
   liquibase:
     change-log: classpath*:/db/changelog/db.changelog-master.xml
-    contexts: "default,local"
+    contexts: "default,local,pgvector"
     default-schema: public
   datasource:
-    url: jdbc:postgresql://localhost:5432/candidatematch
+    url: jdbc:postgresql://localhost:5433/candidatematch
     username: candidatematch
     password: candidatematch123
     driver-class-name: org.postgresql.Driver
