<think> We are given a diff for three files: two GitHub workflows and one commit files and one resource file, and a commit history message. We must generate a commit message.
The diff is from the user's message is about the commit history. We are given the recent. We must follow the style.

The recent commit message. concise.

The commit message should be.

We the commit.

First the first the commit: The commit.

The commit the commit message: "Update azure and dependencies (feat/api base and drop path align Open" and" then "Update candidate.yaml and open.yaml to unpixed and open refixed previously. Then remove" Then "Security routes explicitly no /api/** allow"

Then auth: allow

Second: fix Method calling /auth fix SecurityHelper Jwt; Password; permit /auth and CORS; /health and /api

Third: CI Docker2 build.

Then: add Jwt and build: add bean; and restrict /demo fix

Fourth: Security: configuration minor; ci fix indentation

--- a/candidate-match/src/main/resources/application-local.yaml
+++ b/candidate-match/src/main/resources/application-local.yaml
@@ -75,7 +75,7 @@ spring:
   liquibase:
     change-log: classpath*:/db/changelog/db.changelog-master.xml
     contexts: "default,local,pgvector"
-    default-schema: public
+    default-schema: candiatemacth
   datasource:
     url: jdbc:postgresql://localhost:5433/candidatematch
     username: candidatematch
@@ -96,7 +96,7 @@ spring:
     show-sql: false
     properties:
       hibernate:
-        default_schema: public
+        default_schema: candidatemacth
         format_sql: true
         jdbc:
           batch_size: 25
